--- a/lucid_dream.html
+++ b/lucid_dream.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <title>LUCID DREAM</title>
   <style>
     @font-face {
@@ -16,6 +19,11 @@
       font-family: 'PerfectDOSVGA', monospace;
       overflow: hidden;
       cursor: none;
+      -webkit-tap-highlight-color: transparent;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      user-select: none;
+      touch-action: none;
     }
 
     #game-container {
@@ -25,6 +33,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      touch-action: none;
     }
 
     #background-video {
@@ -46,6 +55,7 @@
       background: rgba(0, 0, 0, 0.7);
       border: 2px solid white;
       z-index: 2;
+      touch-action: none;
     }
 
     .status-bar {
@@ -53,7 +63,7 @@
       top: 20px;
       left: 50%;
       transform: translateX(-50%);
-      font-size: 16px;
+      font-size: clamp(12px, 3vw, 16px);
       text-transform: uppercase;
       text-align: center;
       white-space: pre;
@@ -66,11 +76,42 @@
       bottom: 20px;
       left: 50%;
       transform: translateX(-50%);
-      font-size: 16px;
+      font-size: clamp(12px, 3vw, 16px);
       text-align: center;
       opacity: 0.7;
       z-index: 3;
       text-shadow: 2px 2px 0px black;
+    }
+
+    .touch-controls {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+      z-index: 3;
+    }
+
+    .touch-row {
+      display: flex;
+      gap: 20px;
+    }
+
+    .touch-button {
+      width: 50px;
+      height: 50px;
+      background: rgba(255, 255, 255, 0.2);
+      border: 2px solid white;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 24px;
+      color: white;
+      touch-action: none;
     }
 
     /* CRT effect */
@@ -102,6 +143,12 @@
       50% { opacity: 0.95; }
       100% { opacity: 0.9; }
     }
+
+    @media (min-width: 768px) {
+      .touch-controls {
+        display: none;
+      }
+    }
   </style>
 </head>
 <body>
@@ -111,6 +158,18 @@
     <div class="status-bar">LUCID DREAM v1.0
 DEPTH: <span id="depth">0</span>  STEPS: <span id="steps">0</span></div>
     <div class="instructions">USE ARROW KEYS TO NAVIGATE THE DREAM</div>
+    <div class="touch-controls">
+      <div class="touch-row">
+        <div class="touch-button" data-direction="up">↑</div>
+      </div>
+      <div class="touch-row">
+        <div class="touch-button" data-direction="left">←</div>
+        <div class="touch-button" data-direction="right">→</div>
+      </div>
+      <div class="touch-row">
+        <div class="touch-button" data-direction="down">↓</div>
+      </div>
+    </div>
   </div>
 
   <script>
@@ -261,7 +320,7 @@ DEPTH: <span id="depth">0</span>  STEPS: <span id="steps">0</span></div>
     drawMaze();
     depthDisplay.textContent = depth;
 
-    // Handle keyboard input
+    // Add keyboard controls
     document.addEventListener('keydown', (e) => {
       switch(e.key) {
         case 'ArrowUp':
@@ -279,6 +338,35 @@ DEPTH: <span id="depth">0</span>  STEPS: <span id="steps">0</span></div>
       }
       drawMaze();
     });
+
+    // Add touch controls
+    const touchButtons = document.querySelectorAll('.touch-button');
+    touchButtons.forEach(button => {
+      button.addEventListener('touchstart', (e) => {
+        e.preventDefault();
+        const direction = button.dataset.direction;
+        switch(direction) {
+          case 'up':
+            movePlayer(0, -1);
+            break;
+          case 'down':
+            movePlayer(0, 1);
+            break;
+          case 'left':
+            movePlayer(-1, 0);
+            break;
+          case 'right':
+            movePlayer(1, 0);
+            break;
+        }
+        drawMaze();
+      });
+    });
+
+    // Prevent default touch behaviors
+    document.addEventListener('touchmove', (e) => {
+      e.preventDefault();
+    }, { passive: false });
 
     // Add CRT flicker effect
     setInterval(() => {
