--- a/index.html
+++ b/index.html
@@ -11,6 +11,32 @@
       font-family: 'PerfectDOSVGA';
       src: url('fonts/PerfectDOSVGA.ttf') format('truetype');
     }
+    body {
+      margin: 0;
+      padding: 0;
+      background: #000;
+      color: #00ffcc;
+      font-family: 'PerfectDOSVGA', monospace;
+      overflow: hidden;
+    }
+    .crt {
+      position: relative;
+      width: 100vw;
+      height: 100vh;
+      background: #000;
+      overflow: hidden;
+    }
+    #terminal {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      padding: 20px;
+      box-sizing: border-box;
+      white-space: pre-wrap;
+      overflow-y: auto;
+    }
     .skip-button {
       position: fixed;
       bottom: 20px;
@@ -26,18 +52,16 @@
       opacity: 0.7;
       transition: opacity 0.3s;
     }
-
     .skip-button:hover {
       opacity: 1;
       background: rgba(0, 255, 204, 0.1);
     }
   </style>
-  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="crt">
     <div id="terminal"></div>
-    <audio id="bootAudio" src="assets/audio/boot_sequence.mp3" loop></audio>
+    <audio id="bootAudio" src="assets/audio/bootsequence.mp3" loop></audio>
     <div id="skipButton" class="skip-button">SKIP SEQUENCE</div>
   </div>
   <script src="js/main.js"></script>
